--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Hind+Madurai:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 * {
   margin: 0;
@@ -104,7 +105,7 @@ main .secondContainer {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin-top: 2vw;
+  margin: 2vw 0;
 }
 main .secondContainer .secondContainerItem {
   display: flex;
@@ -125,4 +126,193 @@ main .secondContainer .secondContainerItem h4 {
 main .secondContainer .secondContainerItem p {
   font-size: 14px;
   opacity: 0.6;
+}
+main .thirdContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  background: url("../images/thirdBackground.png") no-repeat #F8EDF0;
+  background-position: right center;
+  height: 544.5px;
+  padding-left: 8vw;
+}
+main .thirdContainer button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2vw;
+  background-color: #d23166;
+  padding: 15px 42px;
+  border-radius: 5px;
+  font-family: "Hind Madurai";
+  font-weight: bold;
+}
+main .thirdContainer button a {
+  color: #fafafa;
+}
+main .thirdContainer h2 {
+  font-family: "Hind Madurai";
+  font-size: 44.2px;
+  font-weight: 600;
+  font-stretch: normal;
+  line-height: 1.11;
+  color: #150101;
+}
+main .thirdContainer p {
+  opacity: 0.6;
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #150101;
+}
+main .fourthContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+main .fourthContainer .fourthContainerHeading {
+  font-family: "Hind Madurai";
+  font-size: 44.2px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #150101;
+  padding: 4vw 0 2vw 0;
+}
+main .fourthContainer .fourthSelectContainer {
+  display: flex;
+  gap: 2vw;
+}
+main .fourthContainer .fourthSelectContainer a {
+  opacity: 0.6;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 500;
+  color: #000;
+  transition: 0.4s ease-in-out;
+}
+main .fourthContainer .fourthSelectContainer a:hover {
+  opacity: 1;
+  border-bottom: 3px solid #d64374;
+}
+main .fourthItemContainer {
+  display: flex;
+  align-items: center;
+  gap: 5vw;
+}
+main .fourthItemContainer .fourthItemTextContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+main .fourthItemContainer .fourthItemTextContainer button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #d23166;
+  padding: 15px 42px;
+  border-radius: 5px;
+  font-family: "Hind Madurai";
+  font-weight: bold;
+}
+main .fourthItemContainer .fourthItemTextContainer button a {
+  color: #fafafa;
+}
+main .fourthItemContainer p {
+  opacity: 0.7;
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #000;
+  max-width: 454px;
+}
+main .fourthItemContainer h4 {
+  font-family: "Hind Madurai";
+  font-size: 26px;
+  font-weight: bold;
+  color: #000;
+}
+main .priceH6Container {
+  width: 100%;
+  max-width: 134px;
+  display: flex;
+  margin-top: 2vw;
+  flex-direction: row !important;
+  align-items: center;
+  justify-content: space-between;
+  font-family: "Hind Madurai";
+  color: #000;
+  font-weight: 500;
+}
+main .priceH6Container span {
+  font-size: 26px;
+}
+main .priceH6Container p {
+  text-decoration: line-through;
+  opacity: 0.7;
+  font-family: "Hind Madurai";
+  font-size: 20px;
+}
+main .fourthItemContainer:nth-child(4) {
+  flex-direction: row-reverse;
+}
+main .fourthItemContainer:nth-child(4) .fourthItemTextContainer {
+  align-items: flex-end;
+}
+main .fourthItemContainer:nth-child(4) p {
+  text-align: right;
+}
+main .fourthItemContainer:last-child {
+  flex-direction: row-reverse;
+}
+main .fourthItemContainer:last-child .fourthReviewContainer .fourthReviewTextContainer blockquote > span:before {
+  content: "\f10d";
+  color: #f6762c;
+  font-size: 25px;
+  flex-grow: 0;
+  margin: 0 0 0 0.8px;
+  transform: rotate(-180deg);
+}
+main .fourthItemContainer:last-child .fourthReviewContainer .fourthReviewTextContainer blockquote > span:after {
+  content: "”";
+  width: 5.1px;
+  color: #f6762c;
+  font-size: 25px;
+  flex-grow: 0;
+  margin: 0 0 0 0.8px;
+  transform: rotate(180deg);
+}
+main .fourthItemContainer:last-child .fourthReviewContainer .fourthReviewTextContainer span {
+  display: block;
+  width: 100%;
+  max-width: 322px;
+  opacity: 0.7;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.5;
+  color: #000;
+}
+main .fourthItemContainer:last-child .fourthReviewContainer .fourthContainerAvatar {
+  display: flex;
+  align-items: center;
+  gap: 1vw;
+}
+main .fourthItemContainer:last-child .fourthReviewContainer .fourthContainerAvatar div {
+  font-family: Roboto;
+}
+main .fourthItemContainer:last-child .fourthReviewContainer .fourthContainerAvatar div span {
+  font-size: 24px;
+}
+main .fourthItemContainer:last-child .fourthReviewContainer .fourthContainerAvatar div p {
+  opacity: 0.7;
+  font-size: 12px;
+  font-weight: 500;
+  color: #000;
 }/*# sourceMappingURL=style.css.map */
