--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -557,6 +557,7 @@ footer {
             ul {
                 margin-top: 1vw;
                 display: flex;
+                align-items: center;
                 list-style-type: none;
                 gap: 10px;
             }
